argocd/apps/resume/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rx-resume
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rx-resume
  template:
    metadata:
      labels:
        app: rx-resume
    spec:
      containers:
      - name: rx-resume
        image: amruthpillai/reactive-resume:v4.4.5@sha256:d6e56fa0378801f76a082b5c7a612ed9cece731729afc57e5b48f3b9d6823ff4
        ports:
        - containerPort: 3010
      - name: rx-chrome
        image: ghcr.io/browserless/chromium:latest@sha256:8f9ec76151ca7b105bd260c8ab7dd047c819936874c997885805d7ff6a44339f
        ports:
        - containerPort: 3000
      - name: rx-resume-s3
        image: minio/minio:latest@sha256:640c22768ed5dbc92eacc14502a1b06a1c708fa60431345c78dfc22917062e93
        args:
        - server
        - /data
        ports:
        - name: s3
          containerPort: 9000
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /data
          name: assets-storage
        # resources:
        #   limits:
        #     cpu: 1000m
        #     memory: 2048Mi
        #   requests:
        #     cpu: 1000m
        #     memory: 2048Mi

      volumes:
      - name: assets-storage
        persistentVolumeClaim:
          claimName: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  name: resume-config
                  key: DB_DATABASE_NAME
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  name: resume-config
                  key: DB_USERNAME
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: resume-secrets
                  key: DB_PASSWORD
          image: postgres:15-alpine@sha256:544669f82e55509cc0691f415b2fe1328e05cccbc39fd7be646495fa1bb86573
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  pg_isready --dbname="${POSTGRES_DB}" --username="${POSTGRES_USER}" || exit 1;
                  Chksum="$(psql --dbname="${POSTGRES_DB}" --username="${POSTGRES_USER}" --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')";
                  echo "checksum failure count is $$Chksum";
                  [ "$Chksum" = '0' ] || exit 1
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready --dbname="${POSTGRES_DB}" --username="${POSTGRES_USER}"
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
---
