argocd/apps/resume/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rx-resume-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
  #   nginx.ingress.kubernetes.io/auth-tls-secret: tools/cloudflare-tls-secret
  #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
  #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: istio
  rules:
    - host: rxresume.yanello.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rx-resume
                port:
                  number: 3010
  # tls:
  #   - hosts:
  #       - ...
  #     secretName: cloudflare-origin-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rx-minio-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
  #   nginx.ingress.kubernetes.io/auth-tls-secret: tools/cloudflare-tls-secret
  #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
  #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: istio
  rules:
    - host: minio.yanello.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rx-resume-s3
                port:
                  number: 9000
  # tls:
  #   - hosts:
  #       - ...
  #     secretName: cloudflare-origin-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rx-minio-dashboard-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
  #   nginx.ingress.kubernetes.io/auth-tls-secret: tools/cloudflare-tls-secret
  #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
  #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: istio
  rules:
    - host: minio-dash.yanello.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rx-resume-s3-dashboard
                port:
                  number: 44253
  # tls:
  #   - hosts:
  #       - ...
  #     secretName: cloudflare-origin-server
